# Image-Stitching

./: README.md
different version/version_1/: CMakeLists.txt  Image-Stitching.cpp
different version/version_2/remove_wu/: Untitled.ipynb  main.py  rabbit.py
different version/version_2/拼接/input_image/Haidan/: image_list.txt
different version/version_2/拼接/src/: Untitled.ipynb
重写轮子/: compute_R.cpp
